PF-2442: bug fix: filter text was accidentally also white. updated css so the text is black and readable, but the rest of the header text/icons are white.

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/ncrp.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/ncrp.theme.less
@@ -1049,7 +1049,7 @@ table.table-striped {
     color: white !important;
 }
 
-.ag-header-row, .ag-header-row label, .ag-header-row .helpicon, .ag-header-icon {
+.ag-header-row .ag-header-cell-text, .ag-header-row label, .ag-header-row .helpicon, .ag-header-icon, .ag-header-row .ag-icon, .ag-header-row .ag-icon-filter {
     color: white !important;
 }
 
@@ -1057,5 +1057,5 @@ table.table-striped {
     //background-color: #e0d7cc !important; // cream
     //background-color: #fff9e8 !important; // cornsilk
     // background-color: #d3dde3 !important; // ice
-     background-color: #e6e7e9 !important; // pebble
+    background-color: #e6e7e9 !important; // pebble
 }
